--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	<div class="pageContainer">
 	<div class="mainContent">
 		<div class="jumbotron text-center">
-			<h3>Welcome to</h3>
-			<h1>Circly.ai</h1>
+			<h3>Welcome to Clue's Mod!</h3>
+			<h1>An edit of Circly.ai</h1>
 			<p>
-			Special Edition!
+			Credit below vv
 			</br>
 			</br>
 				<a href=https://twitter.com/XeroxToo>Twitter</a>
