--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>TF Curse Generator (Clue's Mod!)</title>	
+    <title>TF Curse Generator (Nuki's Mod!)</title>	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="site.css" media="screen" rel="stylesheet" type="text/css" />
 	<script src="https://use.fontawesome.com/2fd73ec02e.js"></script>
