--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="pageContainer">
 	<div class="mainContent">
 		<div class="jumbotron text-center">
-			<h3>Welcome to Clue's Mod!</h3>
+			<h3>Welcome to Nuki's Mod!</h3>
 			<h1>An edit of Circly.ai</h1>
 			<p>
 			Credit below vv
@@ -28,7 +28,7 @@
 		</div>
 		<div class="container">
 			<div class="row talk">
-				<p class="circeTalk" id="circePre">Hello. My name is Circe, and this is a cursed webpage.<br /><br />
+				<p class="circeTalk" id="circePre">Hello. My name is Nuki, and this is a cursed webpage.<br /><br />
 					I call it “cursed” because everyone who visits this page is subject to a unique curse that causes drastic physical transformations.<br /><br />
 					Yes, that includes you.<br /><br />
 					It’s a bummer, I know. You’ll have a chance to yell at the person who linked you here later. Well, if you can still talk when I'm done with you. Some people end up worse off than others, but I’ve got a feeling you’ll be one of the lucky ones.<br /> 
